Tabs > spaces + other misc formatting