@@ -12,33 +12,33 @@ import javax.annotation.*;
 import java.util.*;
 
 public class ItemStackRenderer implements IIngredientRenderer<ItemStack> {
-	private static final ItemRenderer itemRenderer = new ItemRenderer();
+    private static final ItemRenderer itemRenderer = new ItemRenderer();
 
-	@Override
-	public void draw(@Nonnull Minecraft minecraft, int xPosition, int yPosition, @Nullable ItemStack itemStack) {
-		if (itemStack == null) {
-			return;
-		}
+    @Override
+    public void draw(@Nonnull Minecraft minecraft, int xPosition, int yPosition, @Nullable ItemStack itemStack) {
+        if (itemStack == null) {
+            return;
+        }
 
-		TextRenderer font = Minecraft.INSTANCE.textRenderer;
-		TextureManager texture = Minecraft.INSTANCE.textureManager;
+        TextRenderer font = Minecraft.INSTANCE.textRenderer;
+        TextureManager texture = Minecraft.INSTANCE.textureManager;
 
-		itemRenderer.method_1487(font, texture, itemStack, xPosition, yPosition);
-		itemRenderer.method_1488(font, texture, itemStack, xPosition, yPosition);
-		GL11.glDisable(GL11.GL_BLEND);
-	}
+        itemRenderer.method_1487(font, texture, itemStack, xPosition, yPosition);
+        itemRenderer.method_1488(font, texture, itemStack, xPosition, yPosition);
+        GL11.glDisable(GL11.GL_BLEND);
+    }
 
-	@Nonnull
-	@Override
-	public List<String> getTooltip(@Nonnull Minecraft minecraft, @Nonnull ItemStack itemStack) {
-		String tooltip = itemStack.getItem().getTranslatedName();
-		List<String> list = null;
-		if (itemStack.getItem() instanceof CustomTooltipProvider tooltipProvider) {
-			list = List.of(tooltipProvider.getTooltip(itemStack, tooltip));
-		}
-		if(list == null) {
-			list = Collections.singletonList(tooltip);
-		}
+    @Nonnull
+    @Override
+    public List<String> getTooltip(@Nonnull Minecraft minecraft, @Nonnull ItemStack itemStack) {
+        String tooltip = itemStack.getItem().getTranslatedName();
+        List<String> list = null;
+        if (itemStack.getItem() instanceof CustomTooltipProvider tooltipProvider) {
+            list = List.of(tooltipProvider.getTooltip(itemStack, tooltip));
+        }
+        if (list == null) {
+            list = Collections.singletonList(tooltip);
+        }
 //		for (int k = 0; k < list.size(); ++k) {
 //			if (k == 0) {
 //				list.set(k, itemStack.getRarity().rarityColor + list.get(k));
@@ -47,6 +47,6 @@ public class ItemStackRenderer implements IIngredientRenderer<ItemStack> {
 //			}
 //		}
 
-		return list;
-	}
+        return list;
+    }
 }
